--- a/.classpath
+++ b/.classpath
@@ -2,12 +2,12 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/richard/Documents/Faculdades/usc/pacotes/usc-autenticacao-1.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/richard/Documents/Faculdades/usc/pacotes/usc-autorizacao-1.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/richard/Documents/Faculdades/usc/pacotes/usc-biometria-1.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/richard/Documents/Faculdades/usc/pacotes/usc-configuracao-1.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/richard/Documents/Faculdades/usc/pacotes/usc-criptografia-1.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/richard/Documents/Faculdades/usc/pacotes/usc-log-1.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/richard/Documents/Faculdades/usc/pacotes/usc-repositorio-1.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Richard/Documents/Faculdades/Usc/Pacotes/usc-autenticacao-1.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Richard/Documents/Faculdades/Usc/Pacotes/usc-autorizacao-1.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Richard/Documents/Faculdades/Usc/Pacotes/usc-biometria-1.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Richard/Documents/Faculdades/Usc/Pacotes/usc-configuracao-1.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Richard/Documents/Faculdades/Usc/Pacotes/usc-criptografia-1.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Richard/Documents/Faculdades/Usc/Pacotes/usc-log-1.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Richard/Documents/Faculdades/Usc/Pacotes/usc-repositorio-1.0.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
